--- a/templates/users/home.html
+++ b/templates/users/home.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
+{% block title %}Home{% endblock %}
 {% block content %}
-<h2>Welcome to LearnX LMS</h2>
-<p><a href="{% url 'login' %}">Login</a> or <a href="{% url 'register' %}">Register</a> to continue.</p>
+<div class="text-center">
+  <h1 class="display-5">Welcome to LearnXz LMS</h1>
+  <p class="lead">Learn at your own pace with our top-rated courses.</p>
+  <a href="{% url 'login' %}" class="btn btn-primary btn-lg">Get Started</a>
+</div>
 {% endblock %}
