--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -1,9 +1,34 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% block title %}Register | LearnXz{% endblock %}
+
 {% block content %}
-<h2>Register</h2>
-<form method="POST">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button class="btn btn-primary">Register</button>
-</form>
+<div class="row justify-content-center">
+  <div class="col-md-6 col-lg-5">
+    <div class="card shadow-sm border-0 mt-5">
+      <div class="card-body p-4">
+        <h3 class="mb-4 text-center">Create Your Account</h3>
+        <form method="post" novalidate>
+          {% csrf_token %}
+          {% for field in form %}
+            <div class="mb-3">
+              <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+              {{ field }}
+              {% if field.errors %}
+                <div class="text-danger small">
+                  {{ field.errors|striptags }}
+                </div>
+              {% endif %}
+            </div>
+          {% endfor %}
+          <div class="d-grid">
+            <button type="submit" class="btn btn-success">Register</button>
+          </div>
+        </form>
+        <p class="mt-3 text-center">
+          Already have an account? <a href="{% url 'login' %}">Login here</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
